--- a/jm_math/Cargo.toml
+++ b/jm_math/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 serde = {workspace = true}
 serde_yaml = {workspace = true}
 rayon = {workspace = true}
+regex = {workspace = true}
